Add plot outline, fix Zhong Xianmin's surname

--- a/indexed.tex
+++ b/indexed.tex
@@ -11,7 +11,7 @@ This way, the author hopes to prove the usefulness of Esperanto in the field of 
 In the thesis, three editions of the novel \textit{Marta\index{Marta}} are discussed, in three different languages: Polish\index{Polish}, Esperanto\index{Esperanto}, and Chinese\index{Chinese}.
 The novel was first published in Polish in 1873.
 Ludwik Zamenhof\index{Zamenhof, Ludwik Lejzer}, the creator of Esperanto, translated the novel from the Polish original into Esperanto, and it was first published in Esperanto in 1910.
-The Chinese version was translated in May 1928 by Zhong Xianmin\index{Zhong Xianmin 錘憲民} (錘憲民 \nazwisko{Zhōng Xiànmín}%
+The Chinese version was translated in May 1928 by Zhong Xianmin\index{Zhong Xianmin 鍾憲民} (鍾憲民 \nazwisko{Zhōng Xiànmín}%
 \footnote{All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. The romanizations of common terms are set in italic type, while proper names are set in regular font.}) %
 from Zamenhof's Esperanto translation and first published in 1930 by \textit{Shanghai Beixin Shuju} (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}), under the title \textit{Gu yan lei} (孤雁淚 \textit{Gū yàn lèi} `The Tears of a Lonely Wild Goose')
 (Kökény and Bleier 1933: 612; Orzeszko\index{Orzeszkowa, Eliza} 1948).
@@ -48,7 +48,7 @@ This has to do with the history and development of the Chinese language.
 Up till the 20th century, Chinese was a highly diglossic\index{diglossia} language.
 No legal standard of the spoken language existed; instead, numerous spoken varieties were used throughout China\index{China}.
 These local varieties are referred to in Chinese as \textit{fangyan\index{fangyan 方言}} (方言 \pinyin{fāngyán} `local language'), a word commonly rendered in English\index{English language} as ``dialect.''
-By Western linguistic standards, these varieties of the language cannot be considered dialects of a single language, being to a large extent mutually unintelligible, therefore in the remaining part of the thesis, the Chinese term \textit{fangyan} will be rendered in English as ``topolect\index{topolect},'' as proposed by Mair\index{Mair} (1991).
+By Western linguistic standards, these varieties of the language cannot be considered dialects of a single language, being to a large extent mutually unintelligible, therefore in the remaining part of the thesis, the Chinese term \textit{fangyan} will be rendered in English as ``topolect\index{topolect},'' as proposed by Mair (1991).
 
 Despite the vast differences between topolect\index{topolect}s, the writing system has largely been uniform throughout China\index{China}, and has also been used in international correspondence between various countries of the Sinitic cultural circle\index{Sinitic cultural circle}, particularly in Japan\index{Japan}, Korea\index{Korea}, and Vietnam\index{Vietnam}.
 In Chinese\index{Chinese}, this written variety is commonly referred to as \textit{wenyanwen} (文言文 \textit{wényánwén}), and in English\index{English language} as ``classical Chinese\index{literary Chinese 文言文}'' or ``literary Chinese\index{literary Chinese 文言文}.''
@@ -60,14 +60,14 @@ The knowledge of various \textit{chengyu} is considered to be an indicator of on
 
 Zhong Xianmin, who translated the novel \textit{Marta\index{Marta}} did so based only on the Esperanto\index{Esperanto} edition, without any knowledge of the Polish\index{Polish} language.
 Due to these specifics of written Chinese\index{Chinese}, certain differences are to be expected between the Chinese translation and the Polish original.
-Should the Esperanto translation prove to be a faithful rendition of the Polish original, it follows that any substantial differences between the original and the Chinese translation have been introduced in Zhong Xianmin\index{Zhong Xianmin 錘憲民}'s work.
+Should the Esperanto translation prove to be a faithful rendition of the Polish original, it follows that any substantial differences between the original and the Chinese translation have been introduced in Zhong Xianmin\index{Zhong Xianmin 鍾憲民}'s work.
 
 \section{Structure of the thesis}
 In the first chapter of the thesis, the subject of research is introduced.
 The second chapter presents the auxilliary language\index{auxilliary language} Esperanto\index{Esperanto}, describing its origin, development, and current state.
 The third chapter provides the presentation of the novel \textit{Marta\index{Marta}} by Eliza Orzeszkowa\index{Orzeszkowa, Eliza} and its historical and cultural background.
 In the fourth chapter, Zamenhof\index{Zamenhof, Ludwik Lejzer}'s Esperanto translation of the novel will be compared with the Polish\index{Polish} original, to determine whether any meaning had been lost or distorted in the translation process.
-The fifth chapter will provide a comparative analysis of the Chinese\index{Chinese} translation by Zhong Xianmin\index{Zhong Xianmin 錘憲民} and its Esperanto source text to see how the translator dealt with the fragments where equivalence could not be easily achieved.
+The fifth chapter will provide a comparative analysis of the Chinese\index{Chinese} translation by Zhong Xianmin\index{Zhong Xianmin 鍾憲民} and its Esperanto source text to see how the translator dealt with the fragments where equivalence could not be easily achieved.
 The sixth chapter will contain a conclusion, discussing whether in the case of the novel \textit{Marta} Esperanto was a suitable bridge language\index{bridge language}, and whether it would be as good a choice if one were to translate a work of fiction nowadays.
 
 
@@ -81,7 +81,7 @@ Ludwik Lejzer Zamenhof was born Leyzer Zamengov (Лейзеръ Заменгов
 At the time, the city was ethnically and linguistically diverse, and was inhabited by Jews, Russians, Poles, and German\index{German language}s.
 Each and all of these nations spoke their own language.
 The Jewish\index{Jew} majority spoke Yiddish\index{Yiddish}, a peculiar amalgam of High German mixed with Hebrew, Aramaic, and Slavic languages.
-Polish\index{Polish} was the language of intelligentsia, Belarussian\index{Belarussian}---the language used in the streets, German---the language of business, and Russian---the official language in the area.
+Polish\index{Polish} was the language of intelligentsia, Belarus\index{Belarus}sian---the language used in the streets, German---the language of business, and Russian---the official language in the area.
 In Białystok, it was not uncommon to speak and understand all of these languages, but young Ludwik had admittedly attained a high degree of familiarity with all of these languages at the age of five.
 Having been raised as an idealist\index{idealism}, in the belief that all men were brothers, young Ludwik had soon noticed the discrepancy between his ideals and the discriminative, exclusive attitudes of the peoples inhabiting his home town.
 Ever since his early childhood, he had had a vision of a single language that could unite all nations
@@ -251,61 +251,82 @@ Any Asian person who struggles with English, and any Westerner who struggles to 
 
 \chapter{Presentation of the novel \textit{Marta\index{Marta}}}
 This chapter describes the novel \textit{Marta} by Eliza Orzeszkowa\index{Orzeszkowa, Eliza}.
-It contains a brief presentation of the historical background: the Polish\index{Polish} people's struggle for independence, the literary trend called ``Warsaw\index{Warsaw} Positivism\index{Positivism},'' and the life story of the author.
+It contains a brief presentation of the novel's historical background: the Polish\index{Polish} people's struggle for independence, the literary trend called ``Warsaw\index{Warsaw} Positivism\index{Positivism},'' and the life story of the author.
 Finally, the plot of the novel is outlined.
 
 \section{Historical background of the novel}
 
 In order to fully understand the works of Eliza Orzeszkowa\index{Orzeszkowa, Eliza}, it is important to put her writings in their historical context.
-Poland\index{Poland} did not exist as a sovereign state after 1795, when the remaining territory of the Polish\index{Polish}-Lithuanian Commonwealth was annexed by the Russian Empire\index{Russian Empire}, the  Kingdom of Prus\index{Prus, Bolesław}sia, and the Austro-Hungarian Empire.
-After the partitions, the ruling forces exercised policies aiming to uproot any expression of Polish patriotism and nationalism. These policies were particularly strict in the Russian and Prussian partitions.
+Towards the end of the 18th century, the Polish\index{Polish}-Lithuanian Commonwealth was in decline.
+Taking advantage of the weaknesses of the Polish state and military, three neighboring countries gradually annexed the territory of the Commonwealth.
+Three partitions of Poland\index{Poland} have taken place, in 1772, 1793, and 1795, after which the Polish crown lost all territory to the Russian Empire\index{Russian Empire}, the Kingdom of Prus\index{Prus, Bolesław}sia, and the Austro-Hungarian Empire, and Poland ceased to exist as a country.
+After the partitions, the ruling forces exercised policies aiming to uproot any expression of Polish patriotism and nationalism.
+These policies have been particularly strict in the Russian and Prussian partitions.
 
-For 123 years, between 1795 and 1918, the Polish\index{Polish} people's struggle for independence constituted an important topic in Polish-language literature.
-After the failure of the 1863 January Uprising against the Russian Empire\index{Russian Empire}, the Polish people were disappointed with Romanticism and slogans of armed fight for independence.
-The fallen uprising and the Polish question had also been an important topic for European socialists
+Unfortunately for the occupants, the Polish\index{Polish} people were not willing to give up their patriotic spirit.
+For 123 years, between 1795 and 1918, their struggle for independence constituted an important topic in Polish-language literature.
+After the failure of the 1863 January Uprising\index{January Uprising} against the Russian Empire\index{Russian Empire}, the Polish people were disappointed with Romanticism and slogans of armed fight for independence
+% The fallen uprising and the Polish question had also been an important topic for European socialists
 (Stekloff 1928).
 
-The end of the January uprising is considered to be the beginning of a literary genre known as the ``Warsaw\index{Warsaw} Positivism\index{Positivism}'' (French\index{French language}: \textit{positivisme varsovien}, Polish\index{Polish}: \textit{pozytywizm warszawski}).
-This philosophy emphasized the importance of ``organic work'' (Polish: \textit{praca organiczna}), that is, active development of education and economy.
+The end of the January Uprising\index{January Uprising} is considered to be the beginning of a literary and philosophical genre known as ``Warsaw\index{Warsaw} Positivism\index{Positivism}'' (French\index{French language}: \textit{positivisme varsovien}, Polish\index{Polish}: \textit{pozytywizm warszawski}).
+This philosophy emphasized the importance of the so-called ``organic work'' (Polish: \textit{praca organiczna}), that is, active development of education and economy.
 % It was particularly important in the works of Positivist writers, who believed that the key to independence was education and hard work, rather than uprisings and revolutions.
-The key topics in Polish Positivist literature included the fight for independence, the emancipation of serfs and women, promoting science, medicine and public hygiene, and the assimilation of Jews into the Polish society.
-Besides Eliza Oreszkowa, important representants of Warsaw Positivism included Bolesław Prus\index{Prus, Bolesław} (1847-1912), Maria Konopnicka (1842-1910), and Henryk Sienkiewicz\index{Sienkiewicz, Henryk} (1846-1916), the laureate of the Nobel Prize in Literature 1905
+The key topics in Polish Positivist literature included the fight for independence, the emancipation of serfs and women, promoting science, medicine and public hygiene, and the assimilation of the Jewish\index{Jew} minority with the Polish society.
+Besides Eliza Oreszkowa, important representants of Warsaw Positivism included Bolesław Prus\index{Prus, Bolesław} (1847--1912), Maria Konopnicka (1842--1910), and Henryk Sienkiewicz\index{Sienkiewicz, Henryk} (1846--1916), the laureate of the Nobel Prize\index{Nobel Prize} in Literature 1905
 (eSzkola.pl).
 
-Gloger (2007) states that in the case of Poland\index{Poland}, Positivism\index{Positivism} played a similar role to that of Enlightenment in Western Europe, that is to say, it paved ground for the development of modernism and modernity, popularizing rationalism and the scientific approach to reality. The cultural impact of Enlightenment in Poland was rather limited due to the overall civilizational lag and unfavorable historical circumstances.
+Gloger (2007) states that in the case of Poland\index{Poland}, Positivism\index{Positivism} played a similar role to that of Enlightenment\index{Enlightenment} in Western Europe, that is to say, it paved ground for the development of modernism and modernity, popularizing rationalism\index{rationalism} and a scientific approach to reality. On the other hand, the cultural impact of Enlightenment in Poland had been rather limited due to the overall civilizational lag and unfavorable historical circumstances.
 
 \section{The life and times of Eliza Orzeszkowa\index{Orzeszkowa, Eliza}}
 
-Eliza Orzeszkowa\index{Orzeszkowa, Eliza} was born Eliza Pawłowska on June 6th, 1841, in the village of Milkowszczyzna in present-day Belarus, to a family of gentry. Her father, Benedykt Pawłowski, died when she was three years old. 
-At the age of ten, she moved to Warsaw\index{Warsaw}, the present-day capital of Poland\index{Poland}, where for the following five years she attended a boarding school run by the nuns of the Order of the Holy Sacrament, where she learned French\index{French language} and German\index{German language}, and explored Polish\index{Polish} literature.
+Eliza Orzeszkowa\index{Orzeszkowa, Eliza} was born Eliza Pawłowska on June 6th, 1841, in the village of Milkowszczyzna\index{Milkowszczyzna}, north of the Niemen\index{Niemen} river, in present-day Belarus\index{Belarus}, to a family of gentry.
+Her father, Benedykt Pawłowski, died when she was three years old. 
+At the age of ten, she moved to Warsaw\index{Warsaw}, the present-day capital of Poland\index{Poland}, where for the following five years she attended a boarding school run by the nuns of the Order of the Holy Sacrament\index{Order of the Holy Sacrament}, where she learned French\index{French language} and German\index{German language}, and explored Polish\index{Polish} literature.
 In 1858, at the age of 17, her parents arranged her marriage with Piotr Orzeszko, a wealthy landowner.
 At the day of their wedding, the bridegroom was 35 years old.
 The marriage of Mr. and Mrs. Orzeszko proved unsuccessful, mainly due to Eliza's political interests---Eliza was highly pro-independence and sought the emancipation of serfs (Britannica, Bachórz, Brykowisko 2011).
 
-During the January Uprising, Eliza was actively working for the Polish\index{Polish} cause, passing messages between the troops, and even helping Mr. Romuald Traugutt, the leader of the insurrection from October 1863 up to its end in August 1864, by hiding him in her house and escorting him to the border of Congress Poland\index{Poland}.
+During the January Uprising\index{January Uprising}, Eliza was actively working for the Polish\index{Polish} cause, passing messages between the troops, and even helping Mr. Romuald Traugutt, the leader of the insurrection from October 1863 up to its end in August 1864, by hiding him in her house and escorting him to the border of Congress Poland\index{Poland}.
 In December 1864, Mr. Orzeszko\index{Orzeszkowa, Eliza} was arrested and sent to Russia.
 (Brykowisko 2011).
 
-In 1866, Eliza settled in Grodno. In 1869, her marriage was annulled.
+In 1869, her marriage was annulled and she settled in Grodno\index{Grodno} (present day Hrodna, Belarus\index{Belarus}).
+Since 1879, she co-owned a publishing house and bookstore in Vilnius\index{Vilnius}, in present-day Lithuania.
+Her most important works included \textit{The Boor} (Polish\index{Polish}: \textit{Cham\index{Boor, The}}), \textit{The Dziurdzia Family} (Polish: \textit{Dziurdziowie\index{Dziurdzia Family, The}}), and \textit{On the Banks of the Niemen\index{Niemen}} (Polish: \textit{Nad Niemnem\index{On the Banks of the Niemen}}).
+Most of her works deal with the difficult existence of peasants, women, and impoverished gentry.
+Her works are often classified as \textit{Tendenzliteratur\index{Tendenzliteratur}} (German\index{German language}: `tendentious literature').
+She had been nominated twice for the Nobel Prize\index{Nobel Prize} in Literature.
+Eliza Orzeszkowa\index{Orzeszkowa, Eliza} died in Grodno in 1910 and was buried at the local Catholic cemetery
+(Brykowisko 2011, Britannica).
 
 \section{Names of Eliza Orzeszkowa\index{Orzeszkowa, Eliza}}
-
 In many Slavic languages, including Polish\index{Polish}, many family names have traditionally taken a different form when referring to a man, his unmarried daughter, and his wife.
 For instance, the wife of the well-known Polish poet of the Romanticist period, Adam Mickiewicz, was referred to as Celina Mickiewiczowa, and his eldest daughter would be referred to as Maria Mickiewiczówna, up until her marriage.
-Analogously, in case of the name ``Eliza Orzeszkowa\index{Orzeszkowa, Eliza},'' Orzeszkowa means `the wife of Mr. Orzeszko,' which roughly corresponds to the English\index{English language} form ``Mrs. Piotr Orzeszko.''
+Analogously, in case of the name ``Eliza Orzeszkowa,'' Orzeszkowa means `the wife of Mr. Orzeszko,' which roughly corresponds to the English\index{English language} form ``Mrs. Piotr Orzeszko.''
 In modern-day Polish, however, this convention is virtually obsolete.
-All family members use the same form of the name, and the wife of Mr. Orzeszko can be called Mrs. Orzeszko.
+All family members use the same form of the name, and the wife of \textit{Pan Orzeszko} (Mr. Orzeszko) can be called \textit{Pani Orzeszko} (Mrs. Orzeszko).
 A notable exception to this rule are the surnames ending in \textit{-ski} or similar suffix\index{suffix}es, such as Kowalski, Górecki, Grodzki.
 These surnames have evolved from adjectives and still follow all the grammar rules pertaining to adjectives.
 Thus, the wife and daughter of the Polish counterpart of John Smith, Jan Kowalski, would still use the form \textit{Kowalska}. 
 
 In Zamenhof\index{Zamenhof, Ludwik Lejzer}'s translation of \textit{Marta\index{Marta}}, the author's name is listed as Eliza Orzeszko\index{Orzeszkowa, Eliza}.
-Zhong Xianmin\index{Zhong Xianmin 錘憲民}'s translation follows this convention, rendering the name into Chinese\index{Chinese} with slightly distorted pronunciation as 愛麗莎・奧西斯哥 (\nazwisko{Àilìshā Àoxīsīgē}).
+Zhong Xianmin\index{Zhong Xianmin 鍾憲民}'s translation follows this convention, rendering the name into Chinese\index{Chinese} with slightly distorted pronunciation as 愛麗莎・奧西斯哥 (\nazwisko{Àilìshā Àoxīsīgē}).
 Other Chinese-language writings and websites use other variations, based on the traditional form ``Eliza Orzeszkowa.''
 These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the name ``Eliza Orzeszkowa'' shall be used, being the most prevalent form in Polish\index{Polish}-language writings.
-\section{The content of the novel \textit{Marta}}
-\textit{Marta} tells the story of Marta Swicka\index{Marta Swicka}.
-In the beginning of the narrative, Marta is presented as a relatively affluent, twenty-odd-year-old lady whose husband had just died, leaving her with a little daughter, no living family members, and no means of livelihood.
-Due to these unfavorable circumstances, she is compelled to move out of a lavish apartment in Warsaw\index{Warsaw} to a plain, dilapidated .
 
-The novel \textit{Marta\index{Marta}} is divided into nine unnumbered chapters and an introduction. 
+\section{Plot outline of the novel \textit{Marta\index{Marta}}}
+The novel \textit{Marta} is divided into nine unnumbered chapters and an introduction. 
+The story is told from the point of view of a third-person omniscient narrator.
+
+\textit{Marta\index{Marta}} tells the tragical story of a certain Marta Świcka.
+In the beginning of the novel, Marta is presented as an impoverished, twenty-odd-year-old lady whose affluent husband had just died, leaving her with a little daughter, no living family members, and no means of livelihood.
+Due to these unfavorable circumstances, she is compelled to move out of a lavish apartment in Warsaw\index{Warsaw} to a plain, dilapidated, single room.
+
+Throughout the novel, the protagonist struggles to find a job to provide for herself and her little daughter.
+At first, she tries her luck as a teacher of French\index{French language} and piano, but soon finds out that the little qualifications she has are not sufficient for her to make ends meet.
+She also finds out that she cannot work in certain professions despite having the necessary qualifications, because those jobs are only available to men.
+She manages to get a job as a seamstress, which she soon quits due to a conflict at workplace.
+Her little daughter falls ill with bronchitis.
+Marta\index{Marta} is compelled to return the rudimentary furniture that she rented for her tiny apartment.
+Finally, a horse-drawn omnibus runs over Marta and she dies on the spot.
