--- a/introduction.tex
+++ b/introduction.tex
@@ -11,7 +11,7 @@ This way, the author hopes to prove the usefulness of Esperanto in the field of 
 In the thesis, three editions of the novel \textit{Marta} are discussed, in three different languages: Polish, Esperanto, and Chinese.
 The novel was first published in Polish in 1873.
 Ludwik Zamenhof, the creator of Esperanto, translated the novel from the Polish original into Esperanto, and it was first published in Esperanto in 1910.
-The Chinese version was translated in May 1928 by Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}%
+The Chinese version was translated in May 1928 by Zhong Xianmin (鍾憲民 \nazwisko{Zhōng Xiànmín}%
 \footnote{All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. The romanizations of common terms are set in italic type, while proper names are set in regular font.}) %
 from Zamenhof's Esperanto translation and first published in 1930 by \textit{Shanghai Beixin Shuju} (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}), under the title \textit{Gu yan lei} (孤雁淚 \textit{Gū yàn lèi} `The Tears of a Lonely Wild Goose')
 (Kökény and Bleier 1933: 612; Orzeszko 1948).
