--- a/references.tex
+++ b/references.tex
@@ -24,11 +24,11 @@ Gloger M. (2007). \textit{Pozytywizm: między nowoczesnością a modernizmem} [P
 
 Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
 
-Lai Tzu-Yun 賴慈芸. (2015). \textit{Lai Ciyun zhuanlan: Ye shi renjian beiju? Xunzhao yizhe Zhong Xianmin shimo} 賴慈芸專欄：也是人間悲劇？尋找譯者鍾憲民始末 [Lai Tzu-Yun's Column: A Human Tragedy? The Search for the Translator Zhong Xianmin]. Retrieved March 7th, 2020, from \url{https://www.storm.mg/lifestyle/76287}.
+% Lai Tzu-Yun 賴慈芸. (2015). \textit{Lai Ciyun zhuanlan: Ye shi renjian beiju? Xunzhao yizhe Zhong Xianmin shimo} 賴慈芸專欄：也是人間悲劇？尋找譯者鍾憲民始末 [Lai Tzu-Yun's Column: A Human Tragedy? The Search for the Translator Zhong Xianmin]. Retrieved March 7th, 2020, from \url{https://www.storm.mg/lifestyle/76287}.
 
 Liu Xiaozhe 劉曉哲. (2016). \textit{Esperanto en Ĉinio}. Retrieved March 24th, 2020, from \url{http://reto.cn/php/esperanto/esperanto-en-cinio/}.
 
-Miłosz, C. (1993). \textit{Historia literatury polskiej: Do roku 1939}. Kraków: ZNAK. 
+% Miłosz, C. (1993). \textit{Historia literatury polskiej: Do roku 1939}. Kraków: ZNAK. 
 
 Okrent A. (2009, July 21). \textit{Discouraging Words: Invented languages and their long history of failure.} Interview with Jason Zasky. Retrieved March 9th, 2020, from \url{http://failuremag.com/article/discouraging-words}.
 
@@ -36,10 +36,10 @@ Mair V. H. (1991). What Is a Chinese Dialect/Topolect? Reflections on Some Key S
 
 Orzeszko E. (1948). \textit{Gū yàn lèi} 孤雁淚 [Marta]. Zhong Xianmin 鍾憲民 (Trans.). Shanghai, China: Guoji Wenhua Fuwushe.
 
-Orzeszkowa E. \textit{Marta}. Retrieved from \url{https://wolnelektury.pl/media/book/pdf/orzeszkowa-marta.pdf} on March 7th, 2020.
-
 Orzeszko E. (1910). \textit{Marta}. L.L. Zamenhof (Trans.). Retrieved from \url{https://bertilow.com/literaturo/marta.html} on March 7th, 2020.
 % https://www.rulit.me/books/marta-read-366296-1.html
+
+Orzeszkowa E. \textit{Marta}. Retrieved from \url{https://wolnelektury.pl/media/book/pdf/orzeszkowa-marta.pdf} on March 7th, 2020.
 
 % Sevänen E. (2018). Modern Literature as a Form of Discourse and Knowledge of Society. \textit{Sociologias}, 20(48). doi:10.1590/15174522-020004803. Retrieved March 7th, 2020.
 
