--- a/chapter_three.tex
+++ b/chapter_three.tex
@@ -63,9 +63,19 @@ In Zamenhof's translation of \textit{Marta}, the author's name is listed as Eliz
 Zhong Xianmin's translation follows this convention, rendering the name into Chinese with slightly distorted pronunciation as 愛麗莎・奧西斯哥 (\nazwisko{Àilìshā Àoxīsīgē}).
 Other Chinese-language writings and websites use other variations, based on the traditional form ``Eliza Orzeszkowa.''
 These names include 艾麗查・奧熱什科娃 (\nazwisko{Àilìchá Àorèshíkēwā}) and 艾麗查・奧若什科娃 (\nazwisko{Àilìchá Àoruòshíkēwā}). In the remaining part of this thesis, the name ``Eliza Orzeszkowa'' shall be used, being the most prevalent form in Polish-language writings.
-\section{The content of the novel \textit{Marta}}
-\textit{Marta} tells the story of Marta Swicka.
-In the beginning of the narrative, Marta is presented as a relatively affluent, twenty-odd-year-old lady whose husband had just died, leaving her with a little daughter, no living family members, and no means of livelihood.
-Due to these unfavorable circumstances, she is compelled to move out of a lavish apartment in Warsaw to a plain, dilapidated .
 
+\section{Plot outline of the novel \textit{Marta}}
 The novel \textit{Marta} is divided into nine unnumbered chapters and an introduction. 
+The story is told from the point of view of a third-person omniscient narrator.
+
+\textit{Marta} tells the tragical story of a certain Marta Świcka.
+In the beginning of the novel, Marta is presented as an impoverished, twenty-odd-year-old lady whose affluent husband had just died, leaving her with a little daughter, no living family members, and no means of livelihood.
+Due to these unfavorable circumstances, she is compelled to move out of a lavish apartment in Warsaw to a plain, dilapidated, single room.
+
+Throughout the novel, the protagonist struggles to find a job to provide for herself and her little daughter.
+At first, she tries her luck as a teacher of French and piano, but soon finds out that the little qualifications she has are not sufficient for her to make ends meet.
+She also finds out that she cannot work in certain professions despite having the necessary qualifications, because those jobs are only available to men.
+She manages to get a job as a seamstress, which she soon quits due to a conflict at workplace.
+Her little daughter falls ill with bronchitis.
+Marta is compelled to return the rudimentary furniture that she rented for her tiny apartment.
+Finally, a horse-drawn omnibus runs over Marta and she dies on the spot.
