Compile on new machine, review introduction

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -14,11 +14,11 @@
 \usepackage{csquotes}
 \definecolor{CompilationTime}{HTML}{aaaaaa}
 \usepackage[top=2.5cm,left=3.5cm,right=2.5cm,bottom=2.5cm]{geometry}
-\setmainfont[Mapping=tex-text]{Minion Pro}
-\setsansfont[Scale=0.88]{Minion Pro}
-\setCJKmainfont[Scale=0.89]{Source Han Serif TC}
-\setCJKsansfont{Source Han Sans TW}
-\setCJKmonofont{Source Han Sans TW}
+\setmainfont[Mapping=tex-text]{Adobe Text Pro}
+\setsansfont[Scale=0.88]{Adobe Text Pro}
+\setCJKmainfont[Scale=0.89]{Noto Serif CJK TC}
+\setCJKsansfont{Noto Sans CJK TC}
+\setCJKmonofont{Noto Sans CJK TC}
 \newfontfamily\pyfont{Adobe Text Pro}
 \newfontfamily\ipafont[Scale=0.95]{Doulos SIL}
 \newcommand{\toponim}[1]{\nohyphens{\pyfont #1}}
