--- a/introduction.tex
+++ b/introduction.tex
@@ -2,25 +2,25 @@
 \defspacing
 
 \section{Research topic and objectives}
-The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and the indirect translation from Esperanto into Chinese.
-The goal of the research is to find the similarities and differences between all three versions. %, analyze the translation techniques used by the two translators.
+The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as two of its translations: a direct translation from Polish into Esperanto and an indirect translation from Esperanto into Chinese.
+The goal of the research is to find similarities and differences between all three versions.
 Through this process, it should be possible to determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese, and conversely, if Esperanto can reliably be used as a bridge language.
 This way, the author hopes to prove the usefulness of Esperanto in the field of translation, and by extension, to promote the study and use of this language.
 
 \section{Overview of literature and references}
 In the thesis, three editions of the novel \textit{Marta} are discussed, in three different languages: Polish, Esperanto, and Chinese.
 The novel was first published in Polish in 1873.
-Ludwik Zamenhof, the creator of Esperanto, translated the novel from the Polish original into Esperanto, and it was first published in Esperanto in 1910.
+Ludwik Zamenhof, the creator of Esperanto, translated the novel from the Polish original into Esperanto, and his translation was first published in 1910.
 The Chinese version was translated in May 1928 by Zhong Xianmin (鍾憲民 \nazwisko{Zhōng Xiànmín}%
 \footnote{All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. The romanizations of common terms are set in italic type, while proper names are set in regular font.}) %
 from Zamenhof's Esperanto translation and first published in 1930 by \textit{Shanghai Beixin Shuju} (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}), under the title \textit{Gu yan lei} (孤雁淚 \textit{Gū yàn lèi} `The Tears of a Lonely Wild Goose')
 (Kökény and Bleier 1933: 612; Orzeszko 1948).
 
-As of this writing, none of the translations is easily available in retail or in libraries, therefore for research purposes, digitalised versions will be used.
-The Esperanto translation has been published to several websites of Esperanto associations and in general, it is relatively easy to obtain.
+As of this writing, none of the translations is easily available in retail or in libraries, therefore for the purposes of this research, digitalised versions will be used.
+The Esperanto translation has been published on the websites of several Esperanto associations and in general, it is relatively easy to obtain.
 The Chinese edition has long gone out of print, it is however available through the electronic library system of the National Taiwan Normal University.
 The edition available in the system is dated 1948 and was published by \textit{Guoji Wenhua Fuwu She} (國際文化服務社 \pinyin{Guójì Wénhuà Fúwù shè} `International Society for Cultural Services').
-The title page names three offices of the society, in Shanghai (上海 \toponim{Shànghǎi}), Beiping (北平 \toponim{Běipíng}, present-day Beijing 北京 \toponim{Běijīng}), and Nanjing (南京 \toponim{Nánjīng}), respectively.
+It is not entirely clear where the Chinese edition had been published, as the title page names three offices of the society, in Shanghai (上海 \toponim{Shànghǎi}), Beiping (北平 \toponim{Běipíng}, present-day Beijing 北京 \toponim{Běijīng}), and Nanjing (南京 \toponim{Nánjīng}), respectively.
 
 \section{Existing publications on the topic}
 Benczik (1979) published an article on the topic of translation from and into Esperanto in Asia.
@@ -52,14 +52,14 @@ By Western linguistic standards, these varieties of the language cannot be consi
 
 Despite the vast differences between topolects, the writing system has largely been uniform throughout China, and has also been used in international correspondence between various countries of the Sinitic cultural circle, particularly in Japan, Korea, and Vietnam.
 In Chinese, this written variety is commonly referred to as \textit{wenyanwen} (文言文 \textit{wényánwén}), and in English as ``classical Chinese'' or ``literary Chinese.''
-The language had undergone very little change between the Han dynasty (漢朝 \pinyin{Hàncháo}, 206 BC-220 AD) and the 20th century, when it was largely replaced by written vernacular Chinese (白話文 \pinyin{báihuàwén}).
+The language had undergone very little change between the Han dynasty (漢朝 \pinyin{Hàncháo}, 206 BC-220 AD) and the 20th century, when it was largely superseded by written vernacular Chinese (白話文 \pinyin{báihuàwén}), a variety much more similar to the spoken language.
 A substantial part of cultural references, vocabulary, and idiomatic expressions has been preserved from the literary language.
 % A corpus of ancient text and Confucian classics written in this language has for many centuries formed the basis of a system of formal education and imperial examinations for civil servants, which had not been abolished until as late as 1905.
 Many idiomatic expressions originating from classical texts, the so-called \textit{chengyu} (成語 \pinyin{chéngyǔ}), are commonly used to precisely convey emotions and moral concepts, or as set phrases in formal correspondence.
 The knowledge of various \textit{chengyu} is considered to be an indicator of one's erudition, and the use of these expressions is an important differentiating factor between colloquial Chinese and its written counterpart.
 
 Zhong Xianmin, who translated the novel \textit{Marta} did so based only on the Esperanto edition, without any knowledge of the Polish language.
-Due to these specifics of written Chinese, certain differences are to be expected between the Chinese translation and the Polish original.
+Due to the aforementioned specifics of written Chinese, certain differences are to be expected between the Chinese translation and the Polish original.
 Should the Esperanto translation prove to be a faithful rendition of the Polish original, it follows that any substantial differences between the original and the Chinese translation have been introduced in Zhong Xianmin's work.
 
 \section{Structure of the thesis}
