Add watch script, review part of Esperanto chapter

--- a/esperanto.tex
+++ b/esperanto.tex
@@ -15,6 +15,7 @@ Ever since his early childhood, he had had a vision of a single language that co
 (Zamenhof 1904, Ziółkowska 2008: 3).
 
 The father and grandfather of Ludwik Zamenhof had been language teachers, and Ludwik himself had a deep interest for languages since early childhood.
+He considered his native languages to be Yiddish and Russian.
 As a young boy, he had dreamt of becoming a great Russian poet, and at the age of ten, he wrote a five-act tragedy in Russian.
 In 1870 he enrolled at a gymnasium in Białystok, which he attended for nine years.
 In 1873 he moved with his parents to Warsaw (Polish: Warszawa \ipa{[varˈʂava]}, present-day capital of Poland), where he studied Latin and Ancient Greek, after which he enrolled at the Philological Gymnasium, a high school with a particular emphasis on the study of languages.
@@ -31,8 +32,7 @@ the suffix \textit{-anto} indicating the gerund form, analogous to such Latin wo
 The language authored by Zamenhof was first described in a book published in the Russian language in 1887 in Warsaw.
 The first book in its Russian edition was titled \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.}
 (Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ `The International Language. Introduction and Complete Textbook').
-This book has subsequently been translated into English, %and published as \textit{Dr.~Esperanto's International Language, Introduction and Complete Grammar}
-Polish, German, and French.
+This book has subsequently been translated into English, Polish, German, and French.
 The book contained a basic course of Zamenhof's constructed language together with a brief dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
 In the book, Zamenhof postulated the need for an international auxilliary language that could connect people from different cultural and language backgrounds.
 He argued that if the humanity had to only learn two languages, their own native language and the proposed bridge language, they would be able to communicate with each other with more ease, enriching all languages and allowing for a better command of one's own native language.
@@ -67,7 +67,7 @@ All parts of speech are perfectly regular, with ingeniously simple conjugations 
 For instance, the verb ``to be'' is \textit{esti} in its dictionary, infinitive form.
 The present tense for all persons is \textit{estas}, the past tense---\textit{estis}, the future tense---\textit{estos}, and the conditional form---\textit{estus}.
 Unlike in the case of ethnic languages in which mastering the verb system under normal conditions could take weeks (conditionals in German), all necessary rules of Esperanto can be described in two sentences.
-All verbs in the languague follow the same pattern.
+All verbs in the language follow the same pattern.
 There are only two cases, nominative and accusative, which is just enough to tell the subject of a sentence from the object.
 The accusative is indicated by the suffix \textit{-n}.
 For example, in the sentence \textit{Li loĝas en granda domo.} (`He lives in a big house.'), \textit{granda domo} (a big house) is used in nominative.
